--- a/package.json
+++ b/package.json
@@ -73,10 +73,15 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.3",
+		"formik": "^2.4.6",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"sweetalert": "^2.1.2",
+		"sweetalert2": "^11.11.1",
+		"yup": "^1.4.0"
 	}
 }
